# ATS

./: .clang-format  .gitignore  README.md  Report.tex  build.gradle.kts  settings.gradle.kts
.github/workflows/: maintenance.yaml
res/cover/: EE-C.eps
src/aiunittests/java/MakeItFit/: MakeItFitTest.java
src/aiunittests/java/MakeItFit/activities/: ActivityManagerTest.java  ActivityTest.java
src/aiunittests/java/MakeItFit/queries/: HowManyAltimetryDoneTest.java  HowManyKMsDoneTest.java  MostDemandingTrainingPlanTest.java  MostDoneActivityTest.java  QueriesManagerTest.java  WhoBurnsMoreCaloriesTest.java  WhoDidTheMostActivitiesTest.java
src/aiunittests/java/MakeItFit/time/: TimeManagerTest.java
src/aiunittests/java/MakeItFit/trainingPlan/: TrainingPlanManagerTest.java  TrainingPlanTest.java
src/aiunittests/java/MakeItFit/users/: UserManagerTest.java  UserTest.java
src/aiunittests/java/MakeItFit/utils/: EmailValidatorTest.java  ExtendedRandomTest.java  MakeItFitDateTest.java  MyTupleTest.java
src/evosuitetests/java/MakeItFit/: Main_ESTest.java  Main_ESTest_scaffolding.java  MakeItFitApplication_ESTest.java  MakeItFitApplication_ESTest_scaffolding.java  MakeItFitController_ESTest.java  MakeItFitController_ESTest_scaffolding.java  MakeItFit_ESTest.java  MakeItFit_ESTest_scaffolding.java
src/evosuitetests/java/MakeItFit/activities/: ActivityManager_ESTest.java  ActivityManager_ESTest_scaffolding.java  Activity_ESTest.java  Activity_ESTest_scaffolding.java
src/main/java/MakeItFit/: MakeItFit.java  MakeItFitApplication.java  MakeItFitController.java
src/quickcheck/java/MakeItFit/: MakeItFitTest.java
src/testgen/: .hindent.yaml  format.sh  testgen.cabal
src/testgen/testgen/: FacadeTemplates.hs  Generators.hs  Java.hs  JavaData.hs  Main.hs  TestClass.hs  TestTemplate.hs
src/unittests/java/MakeItFit/: MakeItFitTest.java
(+171 files in other folders)
