cabal-version: 2.4

name:     testgen
version:  0.1
synopsis: Business layer facade test generator
license:  Apache-2.0

author: Humberto Gomes <a104348@alunos.uminho.pt>
        José Lopes     <a104541@alunos.uminho.pt>
        Mariana Rocha  <a90187@alunos.uminho.pt>

executable testgen
    main-is: Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.15.1.0 && < 5
    hs-source-dirs:   testgen
    default-language: Haskell2010
