cabal-version: 2.4

name:     testgen
version:  0.0.0.1
synopsis: Business layer facade test generator
license:  Apache-2.0

author: Humberto Gomes <a104348@alunos.uminho.pt>
        José Lopes     <a104541@alunos.uminho.pt>
        Mariana Rocha  <a90187@alunos.uminho.pt>

executable testgen
    main-is: Main.hs
    other-modules: JavaData

    build-depends:    base >= 4.15.1.0 && < 5, QuickCheck >= 2.15.0.1
    hs-source-dirs:   testgen
    default-language: Haskell2010
