cabal-version: 2.4
name:          testgen
version:       0.0.0.1
license:       Apache-2.0
author:
    Humberto Gomes <a104348@alunos.uminho.pt>
    José Lopes     <a104541@alunos.uminho.pt>
    Mariana Rocha  <a90187@alunos.uminho.pt>

synopsis:      Business layer facade test generator

executable testgen
    main-is:          Main.hs
    hs-source-dirs:   testgen
    other-modules:
        FacadeTemplates
        Generators
        Java
        TestClass
        TestTemplate

    default-language: Haskell2010
    build-depends:
        base >=4.15.1.0 && <5,
        QuickCheck ^>=2.15.0.1,
        process ^>=1.6.25.0
